fix: letter-spacing for all caps links

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -29,3 +29,7 @@ $line-height-root: 1.75;
 .img {
   border-radius: 8px;
 }
+
+.letter-spacing {
+  letter-spacing: 1.25rem;
+}
